payment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: payment-api
  namespace: default
  labels:
    name: payment-api
spec:
  containers:
    - image: zanagen/payment-api
      name: payment-api
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
