payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: payment-api
