payment/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "payment-api-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "payment-api-service"
    servicePort: 8080
